--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/osuny"]
 	path = themes/osuny
-	url = git@github.com:osunyorg/theme.git
+	url = https://github.com/osunyorg/theme
